deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icingaalertforge
  labels:
    app: icingaalertforge
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app: icingaalertforge
